--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><img src="https://ooo.0o0.ooo/2017/05/16/591a87ef82737.jpg" alt=""></li>
         </template>
     </ul>
-    <button id="btn">加载更多···</button>
+    <button id="btn">加载</button>
     <script>
         let btn = document.querySelector('#btn'),
             ul = document.querySelector('ul'),
